# TicTacToe

./: LICENSE  README.md  pyproject.toml
tests/: test_tic_tac_toe.py
tic_tac_toe/: play.py  tic_tac_toe.py  tic_tac_toe_game.py  tictactoe.css
